--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,172 +1,223 @@
-
 :root {
---primari-color: #2196F3 ;
---secondari-color:#2F303A ;
---accent-color:#F5F4FA ;
---common-white: #E5E5E5 ;
---main-font:  'Raleway', sans-serif;
---main-fonts: 'Roboto', sans-serif;
---title-size: 44px;
---title1-size: 36px;
---logo-size: 26px;
---col-size: 18px;
---button-size: 16px;
---navigation-size: 14px;
+  --primari-color: #2196f3;
+  --logo-color: #000000;
+  --header-color: #212121;
+  --secondari-color: #2f303a;
+  --foter-color: #2f303a;
+  --navigation-link-color: #757575;
+  --background-color: #ffffff;
+  --accent-color: #f5f4fa;
+  --common-white: #e5e5e5;
+  --main-font: "Raleway", sans-serif;
+  --main-fonts: "Roboto", sans-serif;
+  --title-size: 44px;
+  --title1-size: 36px;
+  --logo-size: 26px;
+  --col-size: 18px;
+  --button-size: 16px;
+  --navigation-size: 14px;
+}
+.logo {
+  font-size: var(--logo-size);
+  color: var(--background-color);
+  margin-right: 93px;
+  font-weight: 700;
+  line-height: 1.38;
+  text-decoration: none;
+  
+  
+}
+.logo-s {
+  color: var(--primari-color);
+  text-decoration: none;
+  
+}
+.logo-studio {
+  color: var(--logo-color);
+  text-decoration: none;
+  
 
 }
-.logo{
-    font-family: var(--font-family); 
-    font-size: var(--logo-size);
-    color: #FFFFFF;
-    margin-right: 93px;
 
-}
-.logo-s{
-      color: #2196F3;
-     
-}
-.wraper {background-color: #FFFFFF ;
 
+.wraper {
+  background-color: var(--background-color);
 }
 
 .list {
-    list-style: none;
-    padding: 0%;
-}
-
-.header {
-    width: 1600px;
-    padding: 32px 215px ;
-    display: flex;
-    align-items: center;
-}
-.base-header {
-    color: #212121;
- }
-
-.base-header:hover,
-.base-header:focus {
-    color:#2196F3 ;
-}
-
-
-
-.navigation-link {
-    margin-right: 50px;
-    display: flex;
-    
-
-}
-.navigation-item {
-    margin-right:50px ;
-    display: flex;
-   
-        
-}
-
-
-.navigation {
-    font-family: var(--main-fonts);
-    font-size: var(--navigation-size);
-    margin-right: 330px;
-    }
-.hero {
-background-color: #2F303A;
-text-decoration: none;
-color: #FFFFFF;
-padding: 200x 452px 280px;
-align-items: center;
-
-}
-
-
-
-
-.hero-h{
-
-}
-
-.hero-btn {
-    background-color: #2196F3;
-    border: none;
-    padding: 10px 32px;
-    color: #FFFFFF;
+  list-style: none;
+  padding: 0%;
+  font-family: inherit;
   
 }
 
-.hero-btn:hover,
+body {
+  background: var(--accent-color);
+  color: var(--header-color);
+  font-family: "Roboto", sans-serif;
+  
+}
+
+.header {
+  background-color: var(--background-color);
+  width: 1600px;
+  padding: 32px 215px;
+  display: flex;
+  align-items: center;
+  
+}
+.base-header {
+  color: var(--header-color);
+  text-decoration: none;
+}
+
+.base-header:hover,
+.base-header:focus {
+  color: var(--primari-color);
+}
+
+.navigation-link {
+  margin-right: 50px;
+  display: flex;
+  line-height: 16px;
+
+}
+.navigation-item {
+  margin-right: 50px;
+  display: flex;
+  line-height: 16px;
+  font-weight: 500;
+  line-height: 1.14;
+  color: var(--navigation-link-color);
+  text-decoration: none;
+}
+.navigation-item:hover {
+  color: var(--primari-color);
+}
+
+.navigation {
+  font-family: var(--main-fonts);
+  font-size: var(--navigation-size);
+  margin-right: 330px;
+}
+.hero {
+  background-color: var(--foter-color);
+  text-decoration: none;
+  color: var(--background-color);
+  padding: 200px 452px 280px;
+  align-items: center;
+}
+
+.hero-h {
+  line-height: 1.36;
+  font-weight: 900;
+  text-align: center;
+}
+
+.hero-btn {
+  background-color: var(--primari-color);
+  border: none;
+  padding: 10px 32px;
+  color: var(--background-color);
+  font-weight: 700;
+  line-height: 1.87;
+}
+
 .hero-btn:focus {
-    background-color: aqua;
-}
-.section-1{
-
+  cursor: pointer;
+  background-color: aqua;
 }
 
-.h3 {
-font-size: var(--navigation-size);
-color: #212121;
+.main-section-h {
+  font-size: var(--navigation-size);
+  color: var(--header-color);
+  font-weight: 700;
+  line-height: 1.14;
 }
-.p{
-font-size: var(--navigation-size);
-color: #757575;
+.main-section-p {
+  font-size: var(--navigation-size);
+  color: var(--navigation-link-color);
+  font-weight: 400;
+  line-height: 1.71;
 }
-.h2{
-    font-size: var(--title1-size); 
-    color: #212121;
-}
-
-.p2{
-    font-size: var(--button-size);
-    color: #757575;
-}
-.comand{
-    font-size: var(--button-size);
-    color:#212121 ;
-}
-.foter{
-    background-color: #2F303A;
-      width: 1600px;
-        padding: 140px 1154px 90px 215px;
-        color: #FFFFFF;
+.section-job-h {
+  font-size: var(--title1-size);
+  color: var(--header-color);
+  font-weight: 700;
+  line-height: 1.16;
+  text-align: center;
 }
 
-
+.section-job-p {
+  font-size: var(--button-size);
+  color: var(--navigation-link-color);
+  font-weight: 400;
+  line-height: 1.18;
+}
+.comand {
+  font-size: var(--button-size);
+  color: var(--header-color);
+  font-weight: 500;
+  line-height: 1.18;
+}
+.foter {
+  background-color: var(--foter-color);
+  width: 1600px;
+  padding: 140px 1154px 90px 215px;
+  color: var(--background-color);
+}
 
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
-
-.addres:hover {
-    color: #FFFFFF;
-
+.addres {
+  color: var(--background-color);
+  font-weight: 400;
+  line-height: 1.71;
 }
 /*Портфоліо*/
 .list-btn:hover,
 .list-btn:focus {
-    background-color: #2196F3;
-    color: #212121;
-
+  background-color: var(--primari-color);
+  color: var(--header-color);
+}
+.list-btn {
+  font-weight: 500;
+  line-height: 1.62;
 }
 
-.projekts{
-    color: #212121;
-font-size: var(--col-size)
-
+.projekts {
+  color: var(--header-color);
+  font-size: var(--col-size);
 }
 
-.projekts-p
-{color: #757575;
-font-size: var(--button-size)
+.projekts-p {
+  color: var(--navigation-link-color);
+  font-size: var(--button-size);
+  font-weight: 400;
+  line-height: 1.87;
+    text-decoration: none;
+  
+}
+.projekts-h {
+  font-weight: 700;
+  line-height: 2;
+  color: var(--header-color) ;
+    text-decoration: none;
 }
 
-
+.addres-color {
+  color: #ffffff;
+  opacity: 0.6;
+  text-decoration: none;
+}
