--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,6 +148,8 @@ text-decoration: none;
   font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
+  cursor: pointer;
+  
 }
 
 .hero-btn:focus {
